--- a/index.html
+++ b/index.html
@@ -92,20 +92,10 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
-                                <h4>Master of Science in Data Science</h4>
-                                <h5>University Name</h5>
-                                <p class="timeline-date">2022 - 2024</p>
-                                <p>Relevant coursework: Machine Learning, Deep Learning, Natural Language Processing, Computer Vision, Big Data Analytics</p>
-                            </div>
-                        </div>
-                        
-                        <div class="timeline-item">
-                            <div class="timeline-dot"></div>
-                            <div class="timeline-content">
                                 <h4>Bachelor of Science in Computer Science</h4>
-                                <h5>University Name</h5>
-                                <p class="timeline-date">2018 - 2022</p>
-                                <p>Relevant coursework: Data Structures & Algorithms, Probability & Statistics, Database Systems</p>
+                                <h5>Texas A&M University</h5>
+                                <p class="timeline-date">2020 - 2026</p>
+                                <p>Relevant coursework: Data Science, Machine Learning, Artificial Intelligence, Analysis of Algorithms, Abstract Algebra I-II, Theory of Computation</p>
                             </div>
                         </div>
                     </div>
