--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
         </div>
     </section>
 
-    <!-- New Resume Section -->
+    <!-- Resume Section -->
     <section id="resume" class="section">
         <div class="container">
             <h2>Resume & Experience</h2>
             
             <div class="resume-container">
                 <div class="resume-download">
-                    <a href="preston-bied-resume.pdf" download class="btn btn-resume">
+                    <a href="#" class="btn btn-resume" onclick="alert('Resume download will be available soon!'); return false;">
                         <i class="fas fa-download"></i> Download Resume
                     </a>
                     <p>Or explore my experience below</p>
