added house picture

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 <!-- Project 1: Housing Price Prediction -->
                 <div class="project-card regression">
                     <div class="project-image">
-                        <img src="/api/placeholder/400/250" alt="Housing Price Prediction">
+                        <img src="assets/houses.jpg" alt="Housing Price Prediction">
                     </div>
                     <div class="project-content">
                         <div class="project-badge">Regression Analysis</div>
