--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <h2>About Me</h2>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="/api/placeholder/400/400" alt="Preston Bied Profile Picture">
+                    <img src="assets/PrestonBied.jpg" alt="Preston Bied Profile Picture">
                 </div>
                 <div class="about-text">
                     <p>Hello! I'm a machine learning enthusiast with expertise in deep learning, computer vision, and natural language processing. I have a passion for building ML models and applications that solve real-world problems.</p>
@@ -279,7 +279,7 @@
                 <!-- Project 2: Customer Segmentation -->
                 <div class="project-card clustering">
                     <div class="project-image">
-                        <img src="/api/placeholder/400/250" alt="Customer Segmentation">
+                        <img src="assets/customer-segmentation.webp" alt="Customer Segmentation">
                     </div>
                     <div class="project-content">
                         <div class="project-badge">Unsupervised Learning</div>
@@ -311,7 +311,7 @@
                 <!-- Project 3: Text Classification -->
                 <div class="project-card nlp">
                     <div class="project-image">
-                        <img src="/api/placeholder/400/250" alt="Text Classification">
+                        <img src="assets/news.webp" alt="Text Classification">
                     </div>
                     <div class="project-content">
                         <div class="project-badge">NLP</div>
