added resume download

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
             
             <div class="resume-container">
                 <div class="resume-download">
-                    <a href="#" class="btn btn-resume" onclick="alert('Resume download will be available soon!'); return false;">
+                    <a href="assets/preston_bied_resume.pdf" class="btn-resume" download>
                         <i class="fas fa-download"></i> Download Resume
                     </a>
                     <p>Or explore my experience below</p>
