--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
                     <p>My background includes a strong foundation in computer science and mathematics. I'm passionate about leveraging AI to create innovative solutions that make a positive impact.</p>
                     <div class="social-links">
                         <a href="https://github.com/preston-g-bied" target="_blank"><i class="fab fa-github"></i></a>
-                        <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://twitter.com/yourhandle" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/preston-bied-35313a302/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://x.com/preston_g_bied" target="_blank"><i class="fab fa-twitter"></i></a>
                     </div>
                 </div>
             </div>
@@ -549,11 +549,11 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:your.email@example.com">your.email@example.com</a>
+                    <a href="mailto:your.email@example.com">pgbied@gmail.com</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn Profile</a>
+                    <a href="https://www.linkedin.com/in/preston-bied-35313a302/" target="_blank">LinkedIn Profile</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-github"></i>
@@ -585,8 +585,8 @@
                         <h4>Connect</h4>
                         <div class="social-icons">
                             <a href="https://github.com/preston-g-bied" target="_blank"><i class="fab fa-github"></i></a>
-                            <a href="https://linkedin.com/in/yourprofile" target="_blank"><i class="fab fa-linkedin"></i></a>
-                            <a href="https://twitter.com/yourhandle" target="_blank"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.linkedin.com/in/preston-bied-35313a302/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                            <a href="https://x.com/preston_g_bied" target="_blank"><i class="fab fa-twitter"></i></a>
                         </div>
                     </div>
                 </div>
