--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <i class="fas fa-envelope"></i>
-                    <a href="mailto:your.email@example.com">pgbied@gmail.com</a>
+                    <a href="mailto:pgbied@gmail.com">pgbied@gmail.com</a>
                 </div>
                 <div class="contact-item">
                     <i class="fab fa-linkedin"></i>
