--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                         </div>
                         <div class="skill-bar">
                             <div class="skill-info">
-                                <span>R</span>
+                                <span>C++</span>
                                 <span>75%</span>
                             </div>
                             <div class="skill-progress">
@@ -396,11 +396,20 @@
                     <div class="skill-bars">
                         <div class="skill-bar">
                             <div class="skill-info">
-                                <span>TensorFlow</span>
-                                <span>80%</span>
+                                <span>Scikit-learn</span>
+                                <span>85%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="skill-value" data-value="80"></div>
+                            </div>
+                        </div>
+                        <div class="skill-bar">
+                            <div class="skill-info">
+                                <span>Keras</span>
+                                <span>80%</span>
+                            </div>
+                            <div class="skill-progress">
+                                <div class="skill-value" data-value="70"></div>
                             </div>
                         </div>
                         <div class="skill-bar">
@@ -409,22 +418,13 @@
                                 <span>70%</span>
                             </div>
                             <div class="skill-progress">
-                                <div class="skill-value" data-value="70"></div>
-                            </div>
-                        </div>
-                        <div class="skill-bar">
-                            <div class="skill-info">
-                                <span>Scikit-learn</span>
-                                <span>85%</span>
-                            </div>
-                            <div class="skill-progress">
                                 <div class="skill-value" data-value="85"></div>
                             </div>
                         </div>
                         <div class="skill-bar">
                             <div class="skill-info">
-                                <span>Keras</span>
-                                <span>75%</span>
+                                <span>TensorFlow</span>
+                                <span>70%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="skill-value" data-value="75"></div>
@@ -457,7 +457,7 @@
                         <div class="skill-bar">
                             <div class="skill-info">
                                 <span>Feature Engineering</span>
-                                <span>75%</span>
+                                <span>80%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="skill-value" data-value="75"></div>
@@ -466,7 +466,7 @@
                         <div class="skill-bar">
                             <div class="skill-info">
                                 <span>Big Data Processing</span>
-                                <span>65%</span>
+                                <span>75%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="skill-value" data-value="65"></div>
@@ -480,8 +480,8 @@
                     <div class="skill-bars">
                         <div class="skill-bar">
                             <div class="skill-info">
-                                <span>Computer Vision</span>
-                                <span>70%</span>
+                                <span>Neural Network Design</span>
+                                <span>85%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="skill-value" data-value="70"></div>
@@ -490,7 +490,7 @@
                         <div class="skill-bar">
                             <div class="skill-info">
                                 <span>Natural Language Processing</span>
-                                <span>80%</span>
+                                <span>85%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="skill-value" data-value="80"></div>
@@ -498,8 +498,8 @@
                         </div>
                         <div class="skill-bar">
                             <div class="skill-info">
-                                <span>Reinforcement Learning</span>
-                                <span>60%</span>
+                                <span>Computer Vision</span>
+                                <span>80%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="skill-value" data-value="60"></div>
@@ -508,7 +508,7 @@
                         <div class="skill-bar">
                             <div class="skill-info">
                                 <span>Recommender Systems</span>
-                                <span>75%</span>
+                                <span>80%</span>
                             </div>
                             <div class="skill-progress">
                                 <div class="skill-value" data-value="75"></div>
@@ -525,14 +525,11 @@
                     <span>Git</span>
                     <span>Docker</span>
                     <span>AWS</span>
-                    <span>Google Cloud</span>
                     <span>Matplotlib</span>
                     <span>Seaborn</span>
                     <span>Pandas</span>
                     <span>NumPy</span>
                     <span>Jupyter</span>
-                    <span>Tableau</span>
-                    <span>Power BI</span>
                     <span>Flask</span>
                     <span>FastAPI</span>
                     <span>MLflow</span>
