--- a/index.html
+++ b/index.html
@@ -261,17 +261,17 @@
                         </div>
                         <div class="project-metrics">
                             <div class="metric">
-                                <div class="metric-value">91.2%</div>
+                                <div class="metric-value">94.7%</div>
                                 <div class="metric-label">Accuracy</div>
                             </div>
                             <div class="metric">
-                                <div class="metric-value">Top 15%</div>
+                                <div class="metric-value">Top 8%</div>
                                 <div class="metric-label">Leaderboard</div>
                             </div>
                         </div>
                         <div class="project-links">
                             <a href="https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques" target="_blank" class="btn">View Dataset</a>
-                            <a href="#" class="btn-outline">GitHub Repo</a>
+                            <a href="https://github.com/preston-g-bied/housing-price-prediction/tree/main" class="btn-outline">GitHub Repo</a>
                         </div>
                     </div>
                 </div>
