--- a/index.html
+++ b/index.html
@@ -215,13 +215,23 @@
                         <h3 class="timeline-title">
                             <i class="fas fa-graduation-cap"></i> Education
                         </h3>
+
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
+                                <h4>Post Graduate Program in AI and Machine Learning</h4>
+                                <h5>UT McCombs School of Business</h5>
+                                <p class="timeline-date">2025</p>
+                                <p>Relevant coursework: Deep Learning, NLP, Computer Vision, and Generative AI</p>
+                            </div>
+                        </div>
                         
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
                                 <h4>Bachelor of Science in Computer Science</h4>
                                 <h5>Texas A&M University</h5>
-                                <p class="timeline-date">2020 - 2026</p>
+                                <p class="timeline-date">2020 - 2024</p>
                                 <p>Relevant coursework: Data Science, Machine Learning, Artificial Intelligence, Analysis of Algorithms, Abstract Algebra I-II, Theory of Computation</p>
                             </div>
                         </div>
