--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         <div class="tech-stack">
                             <span>Python</span>
                             <span>K-Means</span>
-                            <span>DBSCAN</span>
+                            <span>Flask</span>
                             <span>Plotly</span>
                         </div>
                         <div class="project-metrics">
@@ -307,13 +307,13 @@
                                 <div class="metric-label">Clusters</div>
                             </div>
                             <div class="metric">
-                                <div class="metric-value">0.68</div>
+                                <div class="metric-value">0.54</div>
                                 <div class="metric-label">Silhouette Score</div>
                             </div>
                         </div>
                         <div class="project-links">
                             <a href="https://www.kaggle.com/datasets/vijayuv/onlineretail" target="_blank" class="btn">View Dataset</a>
-                            <a href="#" class="btn-outline">GitHub Repo</a>
+                            <a href="https://github.com/preston-g-bied/customer-segmentation-analysis" class="btn-outline">GitHub Repo</a>
                         </div>
                     </div>
                 </div>
