fixed project filtering

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <button class="filter-btn active" data-filter="all">All Projects</button>
                 <button class="filter-btn" data-filter="regression">Regression</button>
                 <button class="filter-btn" data-filter="clustering">Clustering</button>
-                <button class="filter-btn" data-filter="recommendation">Recommendation System</button>
+                <button class="filter-btn" data-filter="recommendation">Recommendation</button>
             </div>
             
             <div class="projects-grid">
@@ -260,7 +260,7 @@
                         <img src="assets/books.jpeg" alt="Text Classification">
                     </div>
                     <div class="project-content">
-                        <div class="project-badge">NLP</div>
+                        <div class="project-badge">Recommendation System</div>
                         <h3>GoodReads Book Recommender</h3>
                         <p>Work in Progress: Developed a personalized book recommendation system using GoodReads data. Implemented multiple filtering techniques including collaborative filtering, content-based filtering, and matrix factorization. Created an interactive web interface for users to discover new books based on their preferences.                        </p>
                         <div class="tech-stack">
