added reddit project

--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
                 <button class="filter-btn" data-filter="regression">Regression</button>
                 <button class="filter-btn" data-filter="clustering">Clustering</button>
                 <button class="filter-btn" data-filter="recommendation">Recommendation</button>
+                <button class="filter-btn" data-filter="nlp">Natural Language Processing</button>
             </div>
             
             <div class="projects-grid">
@@ -314,6 +315,38 @@
                         <div class="project-links">
                             <a href="https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques" target="_blank" class="btn">View Dataset</a>
                             <a href="https://github.com/preston-g-bied/housing-price-prediction/tree/main" class="btn-outline">GitHub Repo</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 4: Sentiment Analysis Dashboard -->
+                <div class="project-card nltk">
+                    <div class="project-image">
+                        <img src="assets/houses.jpg" alt="Housing Price Prediction">
+                    </div>
+                    <div class="project-content">
+                        <div class="project-badge">NLP</div>
+                        <h3>Reddit Sentiment Analysis Dashboard</h3>
+                        <p>Developed an interactive dashboard for analyzing sentiment trends in social media posts. Implemented data collection from Reddit API, text preprocessing, and VADER sentiment analysis to track public opinion on trending topics. Created visualizations for sentiment over time, topic distribution, and word frequency analysis. Features include real-time filtering by date ranges, sentiment categories, and search terms, with an intuitive Streamlit interface.</p>
+                        <div class="tech-stack">
+                            <span>Plotly</span>
+                            <span>NLTK/VADER</span>
+                            <span>Streamlit</span>
+                            <span>Pandas</span>
+                        </div>
+                        <div class="project-metrics">
+                            <div class="metric">
+                                <div class="metric-value">75%</div>
+                                <div class="metric-label">Sentiment Accuracy</div>
+                            </div>
+                            <div class="metric">
+                                <div class="metric-value">10K+</div>
+                                <div class="metric-label">Reddit Posts Processed</div>
+                            </div>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques" target="_blank" class="btn">View Dataset</a>
+                            <a href="https://github.com/preston-g-bied/sentiment_dashboard" class="btn-outline">GitHub Repo</a>
                         </div>
                     </div>
                 </div>
