added project photo

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <!-- Project 4: Sentiment Analysis Dashboard -->
                 <div class="project-card nltk">
                     <div class="project-image">
-                        <img src="assets/houses.jpg" alt="Housing Price Prediction">
+                        <img src="assets/reddit.webp" alt="Housing Price Prediction">
                     </div>
                     <div class="project-content">
                         <div class="project-badge">NLP</div>
