updated project tag

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 </div>
 
                 <!-- Project 4: Sentiment Analysis Dashboard -->
-                <div class="project-card nltk">
+                <div class="project-card nlp">
                     <div class="project-image">
                         <img src="assets/reddit.webp" alt="Housing Price Prediction">
                     </div>
