--- a/index.html
+++ b/index.html
@@ -250,44 +250,44 @@
                 <button class="filter-btn active" data-filter="all">All Projects</button>
                 <button class="filter-btn" data-filter="regression">Regression</button>
                 <button class="filter-btn" data-filter="clustering">Clustering</button>
-                <button class="filter-btn" data-filter="recommendation">Recommendation</button>
                 <button class="filter-btn" data-filter="nlp">Natural Language Processing</button>
+                <button class="filter-btn" data-filter="deep-learning">Deep Learning</button>
             </div>
             
             <div class="projects-grid">
-                <!-- Project 3: Text Classification -->
-                <div class="project-card recommendation">
+                <!-- Housing Price Prediction -->
+                <div class="project-card deep-learning">
                     <div class="project-image">
-                        <img src="assets/books.jpeg" alt="Text Classification">
+                        <img src="assets/bird.jpeg" alt="Bird">
                     </div>
                     <div class="project-content">
-                        <div class="project-badge">Recommendation System</div>
-                        <h3>GoodReads Book Recommender</h3>
-                        <p>Work in Progress: Developed a personalized book recommendation system using GoodReads data. Implemented multiple filtering techniques including collaborative filtering, content-based filtering, and matrix factorization. Created an interactive web interface for users to discover new books based on their preferences.                        </p>
+                        <div class="project-badge">Deep Learning</div>
+                        <h3>BirdCLEF+ 2025: Multi-Species Acoustic Monitoring</h3>
+                        <p>[In Progress] Developed a machine learning system to identify birds, amphibians, mammals, and insects from acoustic recordings in Colombia's El Silencio Natural Reserve. Implemented specialized audio processing pipelines and multi-label classification techniques to handle class imbalance and limited training data for rare species.</p>
                         <div class="tech-stack">
                             <span>Python</span>
-                            <span>SVG</span>
-                            <span>TF-IDF</span>
-                            <span>Flask</span>
+                            <span>PyTorch</span>
+                            <span>Librosa</span>
+                            <span>Audiomentations</span>
                         </div>
                         <div class="project-metrics">
                             <div class="metric">
                                 <div class="metric-value">--</div>
-                                <div class="metric-label">Accuracy</div>
+                                <div class="metric-label">ROC-AUC</div>
                             </div>
                             <div class="metric">
-                                <div class="metric-value">---</div>
-                                <div class="metric-label">RMSE</div>
+                                <div class="metric-value">--</div>
+                                <div class="metric-label">Leaderboard</div>
                             </div>
                         </div>
                         <div class="project-links">
-                            <a href="https://github.com/zygmuntz/goodbooks-10k" target="_blank" class="btn">View Dataset</a>
-                            <a href="https://github.com/preston-g-bied/goodreads-book-recommender" class="btn-outline">GitHub Repo</a>
+                            <a href="https://www.kaggle.com/competitions/birdclef-2025/overview" target="_blank" class="btn">View Dataset</a>
+                            <a href="https://github.com/preston-g-bied/birdclef-2025" target="_blank" class="btn-outline">GitHub Repo</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 1: Housing Price Prediction -->
+                <!-- Housing Price Prediction -->
                 <div class="project-card regression">
                     <div class="project-image">
                         <img src="assets/houses.jpg" alt="Housing Price Prediction">
@@ -314,15 +314,15 @@
                         </div>
                         <div class="project-links">
                             <a href="https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques" target="_blank" class="btn">View Dataset</a>
-                            <a href="https://github.com/preston-g-bied/housing-price-prediction/tree/main" class="btn-outline">GitHub Repo</a>
+                            <a href="https://github.com/preston-g-bied/housing-price-prediction" target="_blank" class="btn-outline">GitHub Repo</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 4: Sentiment Analysis Dashboard -->
+                <!-- Sentiment Analysis Dashboard -->
                 <div class="project-card nlp">
                     <div class="project-image">
-                        <img src="assets/reddit.webp" alt="Housing Price Prediction">
+                        <img src="assets/reddit.webp" alt="Reddit">
                     </div>
                     <div class="project-content">
                         <div class="project-badge">NLP</div>
@@ -346,12 +346,12 @@
                         </div>
                         <div class="project-links">
                             <a href="https://www.kaggle.com/competitions/house-prices-advanced-regression-techniques" target="_blank" class="btn">View Dataset</a>
-                            <a href="https://github.com/preston-g-bied/sentiment_dashboard" class="btn-outline">GitHub Repo</a>
+                            <a href="https://github.com/preston-g-bied/sentiment_dashboard" target="_blank" class="btn-outline">GitHub Repo</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 2: Customer Segmentation -->
+                <!-- Customer Segmentation -->
                 <div class="project-card clustering">
                     <div class="project-image">
                         <img src="assets/customer-segmentation.webp" alt="Customer Segmentation">
@@ -378,7 +378,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://www.kaggle.com/datasets/vijayuv/onlineretail" target="_blank" class="btn">View Dataset</a>
-                            <a href="https://github.com/preston-g-bied/customer-segmentation-analysis" class="btn-outline">GitHub Repo</a>
+                            <a href="https://github.com/preston-g-bied/customer-segmentation-analysis" target="_blank" class="btn-outline">GitHub Repo</a>
                         </div>
                     </div>
                 </div>
