--- a/index.html
+++ b/index.html
@@ -236,6 +236,52 @@
                             </div>
                         </div>
                     </div>
+                    <!-- Work Experience -->
+                    <div class="timeline-section">
+                        <h3 class="timeline-title">
+                            <i class="fas fa-briefcase"></i> Work Experience
+                        </h3>
+
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
+                                <h4>Instructor</h4>
+                                <h5>Mathnasium</h5>
+                                <p class="timeline-date">April 2025 - Present</p>
+                                <p>Provided personalized mathematics instruction to students in grades K-12, implementing Mathnasium's proprietary curriculum to address individual learning gaps and build confidence in core mathematical concepts.</p>
+                            </div>
+                        </div>
+                        
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
+                                <h4>Capstone Project</h4>
+                                <h5>Ipelint</h5>
+                                <p class="timeline-date">August 2024 - December 2024</p>
+                                <p>Developed a Multi-Model Al Solution integrating CPC classification, keyword extraction, and prior art search, cutting manual patent analysis time.</p>
+                            </div>
+                        </div>
+                        
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
+                                <h4>Mathematics Teaching Assisstant</h4>
+                                <h5>Texas A&M</h5>
+                                <p class="timeline-date">August 2023 - June 2024</p>
+                                <p>Evaluated and provided detailed feedback on homework assignments for 120+ students across 3 sections of Linear Algebra.</p>
+                            </div>
+                        </div>
+
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
+                                <h4>IP Landscape and Prosecution Analyst</h4>
+                                <h5>MDB Capital</h5>
+                                <p class="timeline-date">August 2022 - May 2023</p>
+                                <p>Composed IP Landscape & Prosecution History Reports using PatentVest, enabling informed investment decisions on early-stage technology companies.</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
