drexel, lead instructor

--- a/index.html
+++ b/index.html
@@ -219,6 +219,16 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
+                                <h4>Masters in AI and Machine Learning</h4>
+                                <h5>Drexel University</h5>
+                                <p class="timeline-date">2020 - 2024</p>
+                                <p>Participated in the Computational Concentration, a theoretical/technical path designed for students interested in developing their own AI / ML algorithms or augmenting existing ones.</p>
+                            </div>
+                        </div>
+
+                        <div class="timeline-item">
+                            <div class="timeline-dot"></div>
+                            <div class="timeline-content">
                                 <h4>Post Graduate Program in AI and Machine Learning</h4>
                                 <h5>UT McCombs School of Business</h5>
                                 <p class="timeline-date">2025</p>
@@ -245,10 +255,10 @@
                         <div class="timeline-item">
                             <div class="timeline-dot"></div>
                             <div class="timeline-content">
-                                <h4>Instructor</h4>
+                                <h4>Lead Instructor</h4>
                                 <h5>Mathnasium</h5>
                                 <p class="timeline-date">April 2025 - Present</p>
-                                <p>Provided personalized mathematics instruction to students in grades K-12, implementing Mathnasium's proprietary curriculum to address individual learning gaps and build confidence in core mathematical concepts.</p>
+                                <p>Supervised and mentored junior instructors, providing training on teaching techniques, student assessment protocols, and center operations to maintain consistent educational quality; Managed daily center operations including student check-ins, progress tracking, and parent communication to ensure smooth facility operations and positive learning environment.</p>
                             </div>
                         </div>
                         
